# comboios-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  MIGRATION.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
comboios/: Cargo.toml  README.md
comboios-core/: Cargo.toml
comboios-core/src/: client.rs  constants.rs  error.rs  lib.rs  query_builder.rs
comboios-core/src/adapters/: cp_adapter.rs  cp_config_provider.rs  id_mapping.rs  ip_adapter.rs  mod.rs
comboios-core/src/domain/: alert.rs  cp_types.rs  journey.rs  station.rs  station_timetable.rs  train.rs  train_journey.rs
comboios-core/tests/: alert_tests.rs  conversion_tests.rs  domain_tests.rs  error_tests.rs  query_builder_tests.rs  station_tests.rs
comboios-mcp/: Cargo.toml  README.md
comboios-mcp/src/: main.rs  server.rs
comboios-server/: Cargo.toml  Dockerfile  README.md
comboios-server/src/: configuration.rs  domain.rs  error.rs  main.rs  startup.rs  telemetry.rs
comboios-server/src/routes/: diagnostics.rs  health_check.rs  mod.rs  refresh.rs  station_timetables.rs  stations.rs  trains.rs
comboios-server/tests/: app_error_tests.rs  error_response_tests.rs
comboios-ui/: Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
comboios-ui/src/: app.css  app.html  env.d.ts
comboios-ui/src/lib/: api.ts  errors.ts  types.ts
comboios-ui/src/lib/components/: AlertBanner.svelte  JourneyTimeline.svelte  LoadingSpinner.svelte  Pagination.svelte  SearchInput.svelte  ServiceTypeBadge.svelte  StationCard.svelte  StationSkeleton.svelte  ThemeToggle.svelte  TrainSkeleton.svelte  TrainStatusBadge.svelte
comboios-ui/src/routes/: +error.svelte  +layout.svelte  +page.svelte
comboios-ui/src/routes/about/: +page.svelte
comboios-ui/src/routes/station/[id]/: +page.svelte  +page.ts
comboios-ui/src/routes/train/[id]/: +page.svelte  +page.ts
comboios-web/: Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  tailwind.css
comboios-web/assets/: tailwind.css
comboios-web/src/: api.rs  domain.rs  main.rs
comboios-web/src/views/: mod.rs  navbar.rs  search.rs  station.rs  train.rs
comboios/examples/: basic_usage.rs
comboios/src/: client.rs  error.rs  lib.rs  query_builder.rs  util.rs
comboios/src/adapters/: cp_adapter.rs  cp_config_provider.rs  ip_adapter.rs  mod.rs
comboios/src/alerts/: mod.rs
comboios/src/domain/: alert.rs  journey.rs  mod.rs  station.rs  station_timetable.rs  train.rs  train_journey.rs
comboios/src/providers/: alerts.rs  api_client.rs  cp_avisos.rs  cp_provider.rs  id_mapping.rs  ip_provider.rs  mod.rs  unified.rs
comboios/tests/: alert_tests.rs  domain_tests.rs  error_tests.rs  html_parsing_test.rs  integration_tests.rs  ip_alerts_test.rs  mock_tests.rs  property_tests.rs  provider_tests.rs  query_builder_tests.rs  retry_tests.rs  station_tests.rs
