[workspace]
resolver = "3"
members = [
    "comboios-core",   # Main library
    "comboios-server", # HTTP API server
    "comboios-mcp",    # MCP server
]

[profile]

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
comboios-core = { path = "comboios-core" }

[workspace.package]
authors = ["Caio Silva <caio.cdcs@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.2.0"
