[package]
name = "comboios"
version = "0.1.0"
authors = ["Caio Silva <caio.cdcs@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"
