[package]
name = "comboios"
version = "0.1.0"
authors = ["Caio Silva <caio.cdcs@gmail.com>"]
edition = "2024"
description = "Unofficial Rust client for Comboios de Portugal (CP) APIs to search stations, get timetables, and retrieve train information"
documentation = "https://docs.rs/comboios"
homepage = "https://github.com/caiocdcs/comboios-rs"
repository = "https://github.com/caiocdcs/comboios-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cp", "comboios", "portugal", "trains", "railway"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = ["tests/", "examples/", ".github/", "*.md", "Cargo.lock"]

[lib]
path = "src/lib.rs"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["time"] }
tracing = { version = "0.1.41", optional = true }
urlencoding = "2.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"
wiremock = "0.6"
proptest = "1.5"
